--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             const list = document.getElementById("namespace-list");
             data.forEach(ns => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a href="/pods/${ns}">${ns}</a>`;
+                li.innerHTML = `<a href="/pods?namespace=${ns}">${ns}</a>`;
                 list.appendChild(li);
             });
         });
