--- a/templates/pods.html
+++ b/templates/pods.html
@@ -22,7 +22,7 @@
             const list = document.getElementById("pod-list");
             data.forEach(pod => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a href="/containers/${namespace}/${pod}">${pod}</a>`;
+                li.innerHTML = `<a href="/containers?namespace=${namespace}&pod=${pod}">${pod}</a>`;
                 list.appendChild(li);
             });
         });
