--- a/templates/pods.html
+++ b/templates/pods.html
@@ -16,13 +16,13 @@
     const namespace = urlParams.get("namespace");
 
     // Fetch pods
-    fetch(`/api/pods/${namespace}`)
+    fetch(`/api/v1/pods/${namespace}`)
         .then(response => response.json())
         .then(data => {
             const list = document.getElementById("pod-list");
             data.forEach(pod => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a href="/containers?namespace=${namespace}&pod=${pod}">${pod}</a>`;
+                li.innerHTML = `<a href="/api/v1/containers?namespace=${namespace}&pod=${pod}">${pod}</a>`;
                 list.appendChild(li);
             });
         });
