--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,6 +1,7 @@
 body.login-page {
-    font-family: Arial, sans-serif;
+    font-family: 'Vazir', sans-serif;
     margin: 0;
+    direction: rtl;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -30,12 +31,15 @@ h2 {
 .login-form-group {
     margin-bottom: 15px;
     text-align: left;
+    direction: ltr;
 }
 
 .login-form-group label {
     font-size: 14px;
     color: #555;
+    direction: rtl;
     display: block;
+    text-align: right;
     margin-bottom: 5px;
 }
 
