--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,7 @@
 body {
-    font-family: Arial, sans-serif;
     margin: 20px;
+    direction: rtl;
+    font-family: 'Vazir', sans-serif;
 }
 
 h1 {
