--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>ورود</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Vazir&display=swap">
     <link rel="stylesheet" href="/static/css/login.css">
 </head>
+
 <body class="login-page">
 <div class="login-container">
     <div class="login-box">
-        <h2>Login</h2>
+        <h2>ورود به حساب کاربری</h2>
 
         <!-- نمایش پیغام خطا اگر وجود داشته باشد -->
         {% if error %}
@@ -20,16 +22,16 @@
 
         <form method="post" action="/login">
             <div class="login-form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                <label for="username" >نام کاربری :</label>
+                <input type="text" id="username" name="username" placeholder="نام کاربری خود را وارد کنید" required>
             </div>
             <div class="login-form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                <label for="password">کلمه عبور :</label>
+                <input type="password" id="password" name="password" placeholder="کلمه عبور خود را وارد کنید" required>
             </div>
-            <button type="submit" class="login-btn">Login</button>
+            <button type="submit" class="login-btn">ورود</button>
         </form>
-        <p>Don't have an account? <a href="/register">Register here</a></p>
+        <p>حساب کاربری ندارید؟ <a href="/register">ثبت‌نام کنید</a></p>
     </div>
 </div>
 </body>
