--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -138,6 +138,111 @@ main h2 {
     border-radius: 5px;
 }
 
+.add-simulation-btn {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.add-simulation-btn:hover {
+    background-color: #0056b3;
+}
+
+.simulation-form {
+    margin-top: 20px;
+}
+
+#simulationJson {
+    width: 100%;
+    height: 150px;
+    font-size: 14px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.simulation-buttons {
+    margin-top: 10px;
+}
+
+.simulation-btn {
+    background-color: #28a745;
+    color: white;
+    padding: 10px 15px;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.simulation-btn:hover {
+    background-color: #218838;
+}
+
+/* استایل جدول */
+#simulationTable {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+#simulationTable th, #simulationTable td {
+    padding: 12px;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+#simulationTable th {
+    background-color: #4CAF50;
+    color: white;
+}
+
+#simulationTable tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#simulationTable tr:hover {
+    background-color: #ddd;
+}
+
+/* دکمه بارگذاری بیشتر */
+#loadMoreBtn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+#loadMoreBtn:hover {
+    background-color: #45a049;
+}
+
+#simulationTable tbody tr {
+    display: table-row;
+}
+
+.delete-btn {
+    background-color: #f44336; /* رنگ قرمز */
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.delete-btn:hover {
+    background-color: #d32f2f; /* رنگ قرمز تیره‌تر */
+}
+
 /* Responsive design for smaller screens */
 @media (max-width: 768px) {
     .dashboard-container {
