--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -199,6 +199,7 @@ main h2 {
 
 #simulationTable th {
     background-color: #4CAF50;
+    text-align: center;
     color: white;
 }
 
@@ -240,7 +241,20 @@ main h2 {
 }
 
 .delete-btn:hover {
-    background-color: #d32f2f; /* رنگ قرمز تیره‌تر */
+    background-color: #d32f2f;
+}
+
+.run-btn {
+    background-color: #2c8741;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.run-btn:hover {
+    background-color: #49aa5e;
 }
 
 /* Responsive design for smaller screens */
